# klunkar

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.bak  README.md  docker-compose.yml  pyproject.toml  railway.cron.toml  railway.toml
klunkar/: bot.py  cli.py  config.py  db.py  markdown.py  models.py  ranking.py  release.py  systembolaget.py  telegram.py  vivino.py
klunkar/sources/: __init__.py  base.py  munskankarna.py  vinbanken.py  vivino.py
scripts/: install-hooks.sh
scripts/git-hooks/: pre-commit  pre-push
tests/: test_backfill_notify.py  test_bot_commands.py  test_category.py  test_format_message.py  test_munskankarna_parse.py  test_ranking.py  test_should_run.py  test_sources_protocol.py  test_systembolaget_parse.py  test_vinbanken_parse.py
tests/fixtures/: munskankarna_2026-04-24.html  vinbanken_article_roda_2026-05-15.html  vinbanken_article_vitt_2026-05-15.html  vinbanken_hub_2026-05-12.html
