[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "klunkar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
"rapidfuzz>=3.0",
    "zoneinfo; python_version < '3.9'",
]

[project.scripts]
klunkar = "klunkar.cli:app"

[tool.ruff]
line-length = 100
