[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "klunkar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    "rapidfuzz>=3.0",
    "pydantic>=2.0",
    "beautifulsoup4>=4.12",
    "zoneinfo; python_version < '3.9'",
]

[project.scripts]
klunkar = "klunkar.cli:app"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.pytest.ini_options]
markers = ["live: make real network requests; opt-in with -m live"]

[tool.ruff]
line-length = 100
